@@ -1,7 +1,6 @@
 package com.unosquare.carmigo.util;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.modelmapper.ModelMapper;
 
 /**
@@ -22,6 +21,6 @@ public final class MapperUtils {
       final List<S> source, final Class<T> targetClass, final ModelMapper modelMapper) {
     return source.stream()
         .map(element -> modelMapper.map(element, targetClass))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
